--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -7,20 +7,25 @@
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 
     <!-- jquery -->
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.7.0.min.js"
+            integrity="sha256-2Pmvv0kuTBOenSvLm6bvfBSSHrUJ+3A7x6P5Ebd07/g=" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/js-cookie@3.0.5/dist/js.cookie.min.js"></script>
 
-    <scrip src="/js/login.js"></scrip>
+    <script src="/js/login.js"></script>
 
     <title>Title</title>
 </head>
 <body>
     <h1>로그인</h1>
     <div>
+        <button id="signup-btn">회원가입</button>
+    </div>
+    <div>
         <div>아이디</div>
-        <input type="text" name="username">
+        <input id="username" type="text"name="username">
 
         <div>비밀번호</div>
-        <input type="password" name="password">
+        <input id="password" type="password" name="password">
 
         <button id="login-btn">로그인</button>
     </div>
